add timer,fix img size, add solution

--- a/main.css
+++ b/main.css
@@ -22,17 +22,19 @@ h3 {
   }
 #brunette,
 #blonde {
-    width:100px;
-    height:70px;
+    width:200px;
+    height:150px;
     position: absolute;
 }
 #brunette {
     left: 0px;
-    top: 130px;
+    top: 20px;
+
 }
 #blonde {
     left: 0px;
-    top: 210px;
+    top: 150px;
+    margin-top: 50px;
 }
 #reset {
     text-align: center;
@@ -48,9 +50,21 @@ h3 {
     font-weight: bolder;
     color: #ff33cc;
 }
-#field {
+#field{
 
-    height: 500px;
+    height: 370px;
     border: 3px solid #ff33cc;
     position: relative;
 }
+
+.won {
+  display: inline-block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 200px;
+    height: 100px;
+    margin: auto;
+  }
